--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,24 @@
 spring.application.name=RAG_MILVUS
-spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.embedding.options.model=text-embedding-3-large
-spring.ai.openai.chat.options.model:=gpt-4-turbo
+
 paha.aiapp.vectorStorePath=/tmp/vectorstore_milvus.json
-paha.aiapp.documentsToLoad=classpath:/movies500.csv
+
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.embedding.options.model=text-embedding-3-small
+spring.ai.openai.chat.options.model=gpt-4-turbo
+spring.ai.vectorstore.milvus.client.host=localhost
+spring.ai.vectorstore.milvus.client.port=19530
+spring.ai.vectorstore.milvus.client.username=root
+spring.ai.vectorstore.milvus.client.password=milvus
+spring.ai.vectorstore.milvus.databaseName=default
+spring.ai.vectorstore.milvus.collectionName=vector_store
+spring.ai.vectorstore.milvus.embeddingDimentions=1536
+spring.ai.vectorstore.milvus.indexTYpe=IVF_FLAT
+spring.ai.vectorstore.milvus.metricType=COSINE
+
+
+paha.aiapp.documentsToLoad[0]=classpath:/towvehicles.txt
+paha.aiapp.documentsToLoad[1]=https://yamahaoutboards.com/outboards/350-150-hp/in-line-4/f150-(i4)/pb_spt_open_212_f150xb_9-10-2020-occ
+paha.aiapp.documentsToLoad[2]=https://yamahaoutboards.com/outboards/350-150-hp/v6-4-2l/f300-(4-2l)/pb_spt_open-232_f300xsb2_6-29-2023_occ
+paha.aiapp.documentsToLoad[3]=https://yamahaoutboards.com/outboards/xto-offshore/v8-5-6l/xf425/pb_spt_open-322_tw_lxf425usb2_8-26-2021_occ
+paha.aiapp.documentsToLoad[4]=https://yamahaoutboards.com/outboards/xto-offshore/v8-5-6l/xf425/pb_sct_380lxf_tr_xf425_8-30-2018_occ
+paha.aiapp.documentsToLoad[5]=classpath:/movies500.txt
